# wipt

./: .env.example  README.md  pyproject.toml  requirements.txt
src/wipt/: __init__.py  cli.py  config.py  gmail_client.py  gmail_client_secrets.json  main.py  pdf_processor.py  pdf_selector.py  sheets_client.py
src/wipt/secrets/: gmail_client_secrets.json
tests/: Purchase Orders - test_data.csv  test_config.py  test_pdf_processor.py  test_pdf_selector.py  test_pdf_validation.py
